# plasticity

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  DoxygenWarningLog.txt  LICENSE  README  README.md  authors  contrib  elastoplasticity.tex  relatedPages.dox  test
Training_Materials/ICME_Workshop_2021/: README.md
Training_Materials/Post-Processing/: Output_tutorial.docx
Training_Materials/Pre-Processing/: Input_tutorial.docx
Training_Materials/Pre-Processing/FCC/: Copper.dream3d  Copper.xdmf  PRISMS_pipeline_fcc.json  copperdata1.txt  copperdata2.txt  grainID.txt  orientations.txt  plotpolefromebsd_Cu.m  polefigure_initial_Cu.m
Training_Materials/Pre-Processing/HCP/: Magnesium.xdmf  PRISMS_pipeline_hcp.json  grainID.txt  orientations.txt  plotpolefromebsd_mg.m  polefigure_initial_Mg.m
Training_Materials/Pre-Processing/Post-Processing/: oriplot_big.m
Training_Materials/Training_2021/: README.md
applications/continuumPlasticity/: CMakeLists.txt  main.cc
applications/continuumPlasticity/bending/: CMakeLists.txt  main.cc  materialProperties.json  parameters.h
applications/continuumPlasticity/constrainedTension/: main.cc  materialProperties.json  parameters.h
applications/continuumPlasticity/indentation/: BCinfo.txt  IndentationBCsConstraints.txt  prm.prm  prm2.prm
applications/continuumPlasticity/indentationExternalMesh/: IndentationBCsConstraints.txt  prm.prm
applications/continuumPlasticity/shear/: CMakeLists.txt  main.cc  materialProperties.json  parameters.h
applications/continuumPlasticity/simpleTension/: CMakeLists.txt  main.cc  parameters.h  prm.prm
applications/continuumPlasticity/simpleTensionBVP/: CMakeLists.txt  main.cc
applications/continuumPlasticity/simpleTensionInputPrm/: BCinfo.txt  parameters.h  prm.prm
applications/continuumPlasticity/tensionBVP/: CMakeLists.txt  main.cc
applications/crystalPlasticity/: CMakeLists.txt  main.cc
applications/crystalPlasticity/shear/: CMakeLists.txt  Makefile
applications/crystalPlasticity/simpleTension/: Makefile  (+1 more)
applications/elasticity/: step-40  step-40.cc
applications/userModels/: main.cc  parameters.h  userModel.h
html/: _p_extern_8cc.html  _p_library_8cc.html  _r_e_a_d_m_e_8md.html  annotated.html  assemble_8cc.html  bcc_2calculate_plasticity_8cc.html  bcc_2inactive_slip_removal_8cc.html  bcc_2load_orientations_8cc.html  bcc_2matrix_operations_8cc.html  bcc_2model_8cc.html  bcc_2model_8h.html  bcc_2model_8h_source.html  bcc_2reorient_8cc.html  bcc_2rotation_operations_8cc.html  bcc_2tangent_modulus_8cc.html  bending_2parameters_8h.html  bending_2parameters_8h_source.html  boundary_conditions_8cc.html  calculate_plasticity1_8cc.html  calculate_plasticity2_8cc.html  calculate_plasticity_8cc.html  class_b_c_function-members.html  class_b_c_function.html  classcontinuum_plasticity-members.html  classcontinuum_plasticity.html  classcrystal_orientations_i_o-members.html  classcrystal_orientations_i_o.html  classcrystal_plasticity-members.html  classcrystal_plasticity.html  classelasticity-members.html  classelasticity.html  classelliptic_b_v_p-members.html  classelliptic_b_v_p.html  classenhanced_strain-members.html  classenhanced_strain.html  classes.html  classstatic_condensation-members.html  classstatic_condensation.html  classuser_model-members.html  classuser_model.html  (+472 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  (+190 more)
include/: continuumPlasticity.h  continuumPlasticity_template_instantiations.h  crystalOrientationsIO.h  crystalOrientationsIO_template_instantiations.h  crystalPlasticity.h  crystalPlasticity_template_instantiations.h  dealIIheaders.h  ellipticBVP.h  ellipticBVP_template_instantiations.h  userInputParameters.h
latex/: md_README.tex  page1.tex  page2.tex  page3.tex  refman.tex
src/ellipticBVP/: applyInitialConditions.cc  assemble.cc  assemble2.cc  boundaryConditions.cc  ellipticBVP.cc  incrementUpdates.cc  indentationBCs.cc  init.cc  initialConditions.cc  iterationUpdates.cc  markBoundaries.cc  mesh.cc  output.cc  periodicBCs.cc  project.cc  projectionFunctions.cc  run.cc  solve.cc  solveIncrement.cc  solveLinearSystem.cc  solveNonLinearSystem.cc  userModelMethods.cc
src/enrichmentModels/: enhancedStrain.cc  enhancedStrain.h
src/userInputParameters/: userInputParameters.cc
src/utilityObjects/: crystalOrientationsIO.cc  staticCondensation.cc
tests/compile_tests/: run_compile_tests.py  run_compile_tests_rate_dep.py
utils/: .bashrc  getInteractiveCore  pbsJob
utils/PFunction/: PBasisSetWriter.hh  PComplexSymFunction.hh  PExtern.hh  PFunction.hh  PFunctionWriter.hh  PRealSymFunction.hh  PSeriesFunction.hh  PSymFunction.hh  version.hh
utils/json/: LICENSE.txt
(+354 files in other folders)
